--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 h1 {text-align: center;}
 p {text-align: center;}
 div {text-align: center;}
-<h1>successfully hosted </h1>
+<h1>successfully hosted , LIKE SHARE AND SUBSCRIBE </h1>
 </style>
 </head>
-<body>
+<body> 
+  </body>
+  </html>
