--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-h1 {text-align: center;}
-p {text-align: center;}
-div {text-align: center;}
-<h1>successfully hosted , LIKE SHARE AND SUBSCRIBE </h1>
-</style>
-</head>
-<body> 
-  </body>
-  </html>
+<body>
+
+<h1 style="text-align:center;">SUCCESSFULLY HOSTED</h1>
+<p style="text-align:center;">LIKE , SHARE AND SUBSCRIBE.</p>
+
+</body>
+</html>
